# DD-Ranking

./: .gitignore  README.md  book.toml  demo_aug.py  demo_hard.py  demo_soft.py  hard_label_eval.py  pyproject.toml  setup.py  soft_label_eval.py
D4M/: readme.md  transform.py
D4M/CIFAR10/: IPC1.yaml  IPC10.yaml  IPC50.yaml
D4M/CIFAR100/: IPC1.yaml  IPC10.yaml  IPC50.yaml
D4M/ImageNet1K/: IPC1.yaml  IPC10.yaml  IPC50.yaml
D4M/TinyImageNet/: IPC1.yaml  IPC10.yaml  IPC50.yaml
D4M/cifar_fkd/: squeeze_cifar100.py
D4M/distillation/: gen_prototype_imgnt.sh
D4M/scripts/: eval_cifar10.sh  eval_cifar100.sh
DATM/CIFAR10/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DATM/CIFAR100/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DATM/TinyImageNet/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DATM/buffer/: buffer_FTD.py
DATM/distill/: DATM.py
DATM/utils/: cfg.py
DC-DSA-DM/: main_DM.py
DC/CIFAR10/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DC/CIFAR100/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DC/TinyImageNet/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DM/CIFAR10/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DM/CIFAR100/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DM/TinyImageNet/: IPC1.yaml  IPC10.yaml  IPC50.yaml
DSA/CIFAR10/: IPC1.yaml  IPC10.yaml  IPC50.yaml
MTT/: readme.md
RDED/: argument.py  readme.md  transform.py
book/: index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
configs/: Demo_ARS.yaml  Demo_Hard_Label.yaml  Demo_LRS_Hard_Label.yaml  Demo_LRS_Soft_Label.yaml  Demo_Soft_Label.yaml
doc/: SUMMARY.md  introduction.md
methods/: README.md
(+166 files in other folders)
