[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch >= 2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "ddranking"
version = "0.2.0"
description = "DD-Ranking: Rethinking the Evaluation of Dataset Distillation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy<2.0.0",
    "torchvision",
    "tqdm",
    "scipy<1.16.0",
    "kornia",
    "timm",
    "pandas"
]
